@@ -1,3 +1,12 @@
+2021-08-03  Sonia Singla  <soniasingla.1812@gmail.com>
+
+        Web Inspector: Add standard logical properties to CSS keyword completion
+        https://bugs.webkit.org/show_bug.cgi?id=228548
+
+        Reviewed by Devin Rousso.
+
+        * UserInterface/Models/CSSKeywordCompletions.js:
+
 2021-08-02  Patrick Angle  <pangle@apple.com>
 
         Web Inspector: [AppleWin] Speculative internal build fix for copying `InspectorBackendCommands.js`
